apps/nots/overlays/aws-us-west-2-cc-smarsh-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nots
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nots
      app.kubernetes.io/instance: nots
  template:
    spec:
      containers:
        - name: nots
          resources:
            limits:
              cpu: 1000m
              memory: 3G
              ephemeral-storage: 1G
            requests:
              cpu: 500m
              memory: 1G
              ephemeral-storage: 256M
